app.yml
apiVersion: apps/v1beta1 
kind: Deployment
metadata:
 name: application
spec:
 template:
   metadata:
     labels:
       app: application
   spec:
     containers:
     - image: 218322401723.dkr.ecr.ap-south-1.amazonaws.com/docker-images:chatapp
       imagePullPolicy: "Always"
       name: application
       ports:
       - containerPort: 8000
