database.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
 name: postgres
spec:
 template:
   metadata:
     labels:
       app: postgres
   spec:
     containers:
     - name: postgres
       image: postgres:latest
       ports:
       - containerPort: 5432
       volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-pv-claim
     volumes:
      - name: postgres-pv-claim
        persistentVolumeClaim:
          claimName: postgres-pv-claim
