app-srv.yml
apiVersion: v1
kind: Service
metadata:
 name: application
spec:
 type: NodePort
 ports:
 - port: 80
   protocol: TCP
   targetPort: 8000
 selector:
   app: application
