database-srv.yml
apiVersion: v1
kind: Service
metadata:
 name: chatappdb-postgresql
spec:
 type: NodePort
 ports:
 - port: 5432
   targetPort: 5432
 selector:
   app: postgres
