nginx-ingress-controller-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ingress.manju-kubernets.analyzedevops.com
spec:
  externalTrafficPolicy: "Local"
  type: LoadBalancer
  ports:
  - port: 80
    name: http
  - port: 443
    name: https
  selector:
    app: ingress-nginx
